@@ -1,3 +1,8 @@
+2011-01-11 Thunor <thunorsif_at_hotmail.com>
+* Auto-loading of 80 and 81 files is implemented as o and p.
+* The ZX81's LOAD "progname" will now open a file as lower or uppercase
+  within the directory currently set within the load file dialog.
+
 2011-01-10 Thunor <thunorsif_at_hotmail.com>
 * Modified supported RAM sizes: it's now 1 to 4K, 16, 32, 48 and 56K.
 * Auto-loading of ZX80 o and ZX81 p files is now implemented for all
